<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/addAttendeeMenu"
        android:title="@string/menu_add_attendee"/>
    <item
        android:id="@+id/smsInvitationMenu"
        android:title="@string/menu_sms_invitation"/>
    <item
        android:id="@+id/audio7videoOperationMenu"
        android:title="@string/menu_audio7video_operation">
        <menu>
            <group android:checkableBehavior="all" >
                <item
                    android:id="@+id/voiceCallInMenu"
                    android:title="@string/menu_voice_callIn"/>
                <item
                    android:id="@+id/voiceHangupMenu"
                    android:title="@string/menu_voice_hangup"
                    android:visible="false"/>
                <item
                    android:id="@+id/openCameraMenu"
                    android:title="@string/menu_open_camera"/>
                <item
                    android:id="@+id/closeCameraMenu"
                    android:title="@string/menu_close_camera"
                    android:visible="false"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/leaveTalkingGroupMenu"
        android:title="@string/menu_leave_talkingGroup"/>

</menu>