<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/fullScreenVideo_imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/talkingGroup_fullScreenVideo_imageView_content_description"
        android:visibility="gone" />

    <VideoView
        android:id="@+id/guest_demo_videoView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/groupId_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/groupid_textview_bg"
        android:hint="@string/groupId_textView_textHeader"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/cameraSwitch_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/img_camera_switch"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/smallVideo_imageView"
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_above="@+id/talkingGroup_detailInfo_bottomToolbar_tableRow"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/smallvideo_imageview_bg"
        android:contentDescription="@string/talkingGroup_smallVideo_imageView_content_description" />

    <TableRow
        android:id="@+id/talkingGroup_detailInfo_bottomToolbar_tableRow"
        android:layout_width="fill_parent"
        android:layout_height="76dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/img_talkinggroup_detailinfo_bottomtoolbar_bg"
        android:orientation="horizontal" >

        <include
            android:layout_width="80.5dp"
            layout="@layout/talking_group_detailinfo_bottomtoolbar_item_layout" />

        <include
            android:layout_width="80.5dp"
            layout="@layout/talking_group_detailinfo_bottomtoolbar_item_layout" />

        <include
            android:layout_width="80.5dp"
            layout="@layout/talking_group_detailinfo_bottomtoolbar_item_layout" />

        <include
            android:layout_width="78.5dp"
            layout="@layout/talking_group_detailinfo_bottomtoolbar_item_layout" />
    </TableRow>

</RelativeLayout>