<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/img_contact_select_header_bg"
            android:contentDescription="@string/contactSelect_header_imageView_content_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/addressBook_textView_text"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:text="@string/in7preinTalkingGroup_textView_text"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center" >

        <ListView
            android:id="@+id/contactIn7PreinTalkingGroup_listView"
            android:layout_width="106dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="-6dp"
            android:background="@drawable/img_in7prein_talkinggroup_listview_bg"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@drawable/img_in7preintalkinggroup_contact_listview_divider_bg"
            android:fadingEdge="none"
            android:headerDividersEnabled="false"
            android:listSelector="@android:color/transparent"
            android:scrollbars="none" >
        </ListView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toLeftOf="@id/contactIn7PreinTalkingGroup_listView"
            android:background="@drawable/img_addressbook_contact_listview_parent_bg"
            android:orientation="vertical"
            android:paddingRight="6dp" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp" >

                <Button
                    android:id="@+id/add_manualInputContact_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/add_manualinputcontact_btn_bg"
                    android:gravity="center" />

                <EditText
                    android:id="@+id/contact_search_editText"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_toLeftOf="@id/add_manualInputContact_btn"
                    android:drawableLeft="@drawable/ic_action_search"
                    android:hint="@string/contact_search_editText_hint"
                    android:inputType="text" >

                    <requestFocus />
                </EditText>
            </RelativeLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <ListView
                    android:id="@+id/contactInAB_listView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:cacheColorHint="@android:color/transparent"
                    android:divider="@drawable/img_addressbook_contact_listview_divider_bg"
                    android:fadingEdge="none"
                    android:headerDividersEnabled="false"
                    android:listSelector="@android:color/transparent"
                    android:scrollbars="none" >
                </ListView>
            </FrameLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>